    according to the documentation this method should throw PlatformNotSupportedExteption in such cases.
+ New IconInfo type
+ The PixelFormatExtensions class has been made public along with some methods:
  + ToBitsPerPixel
  + IsIndexed
  + IsValidFormat
  + IsSupported
- ImageExtensions class:
  - Fixing SaveAsTiff if currentFrameOnly = false and image contains non-icon images.

- KGySoft.Drawing.Imaging namespace:
====================================
- Palette class: Fixing a possible issue in default caching logic for concurrent access.


~~~~~~~~~
! v5.0.0:
~~~~~~~~~

! Assembly changes:
===================
! Referencing KGySoft.CoreLibraries 5.0.1
+ Targeting also .NET Core 2.0.
+ Targeting also .NET Core 3.0.

+ KGySoft.Drawing.Imaging namespace:
====================================
A New namespace for fast and direct Bitmap pixel manipulation in a type-safe and managed way.
Additionally, provides types for quantizing and dithering.
The new public types in this namespace:
+ IBitmapData interface
+ IReadableBitmapData interface
+ IWritableBitmapData interface
+ IReadWriteBitmapData interface
+ IBitmapDataRow interface
+ IReadableBitmapDataRow interface
+ IWritableBitmapDataRow interface
+ IReadWriteBitmapDataRow interface
+ IDitherer interface
+ IDitheringSession interface
+ IQuantizer interface
+ IQuantizingSession interface
+ PredefinedColorsQuantizer class
+ OptimizedPaletteQuantizer class
+ OrderedDitherer class
+ ErrorDiffusionDitherer class
+ InterleavedGradientNoiseDitherer class
+ RandomNoiseDitherer class
+ Palette class
+ Color32 structure

- KGySoft.Drawing namespace:
============================
+ BitmapExtensions class:
  - Resize method:
    - Fixing resize if keepAspectRatio is true
    - Supporting every source pixel format
    * keepAspectRation parameter is now optional (default value: false)
  + New GetReadableBitmapData/GetWritableBitmapData/GetReadWriteBitmapData methods: They provide and fast managed