@@ -112,6 +112,7 @@ namespace KGySoft.Drawing.Imaging
         /// <remarks>
         /// <para>This method returns the actual raw underlying data as arbitrary unmanaged value type (a value type is unmanaged if contains no managed references).
         /// <typeparamref name="T"/> can have any size so you using this method can access multiple pixels or individual color channels.</para>
+        /// <para>To determine the row width in bytes use the <see cref="IBitmapData.Stride"/> property of the parent <see cref="IReadableBitmapData"/> instance.</para>
         /// <para>To determine the actual pixel size use the <see cref="IBitmapData.PixelFormat"/> property of the parent <see cref="IReadableBitmapData"/> instance.</para>
         /// <note>Please note that on some non-Windows platforms the <see cref="IBitmapData.PixelFormat">IBitmapData.PixelFormat</see> property may return a different format than
         /// the <see cref="Image.PixelFormat">Image.PixelFormat</see> property of the original <see cref="Bitmap"/>.
